--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <section class="content">
             <h1 class="principal-title">Hi there 👋</h1>
             <p class="principal-text-content">
-                Hello, my name is Pedro Henrique, I am a junior developer. 
-                I have experience with php, mysql, html, css and javaScript. 
-                Currently, i am study React, php, Node.js and TypeScript
+                Hello, my name is Pedro Henrique, I am a senior frontend developer. 
+                I have experience with javascript, typescript, nextjs(12 e 13), graphql, rest apis and nodejs. 
+                Currently, i am study gcp(google cloud platform), docker, kubernetes and java.
             </p>
             <div class="links-wrap">
                 <a href="https://github.com/PedroHenrique-git">
