--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p class="principal-text-content">
                 Hello, my name is Pedro Henrique, I am a senior frontend developer. 
                 I have experience with javascript, typescript, nextjs(12 e 13), graphql, rest apis and nodejs. 
-                Currently, i am studying gcp(google cloud platform), docker, kubernetes and java.
+                Currently, i am studying cloud computing, docker, kubernetes and java.
             </p>
             <div class="links-wrap">
                 <a href="https://github.com/PedroHenrique-git">
